--- a/src/global.scss
+++ b/src/global.scss
@@ -26,6 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import "../vlibs/virtwoo-auth/auth.scss";
+@import 'ngx-tour-ngx-popper/styles.css';
 
 .icono {
   margin-inline-end: 0px !important; 
