Tutorial listo, inicio de prompt para estatus

--- a/src/app/pages/basic-data/basic-data.page.html
+++ b/src/app/pages/basic-data/basic-data.page.html
@@ -111,13 +111,11 @@
       (ngSubmit)="onSubmit()">
       <div class="contenedorAvatar" >
         <ion-avatar (click)="SeleccionarImagen()" class="avatar-profile">
-          <ion-img
+          <img
             class="img-avatar"
             *ngIf="!loadingAvatar"
             alt="Avatar"
-            (ionError)="ErrorImagen()"
-            [src]="Avatar()" >
-          </ion-img>
+            [srcPath]="Avatar()" >
           <ion-skeleton-text *ngIf="loadingAvatar"  animated></ion-skeleton-text>
         </ion-avatar>
       </div>
