--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -9,29 +9,54 @@
     {{ title | translate }}
   </div>
   <div class="alert__message"
-    
+  *ngIf="isPromptStatus"
   >
-      <ion-radio-group>
+      <ion-radio-group >
     
         <ion-item>
           <ion-label>
             {{'WINK.STATUS.AVAILABLE' | translate}}
           </ion-label>
-          <ion-radio slot="start" value="biff"></ion-radio>
+          <ion-radio 
+            slot="start" 
+            value="WINK.STATUS.AVAILABLE" 
+            (ionFocus)="Blur($event)"
+            [checked]="description && description === 'WINK.STATUS.AVAILABLE'">
+          </ion-radio>
         </ion-item>
         
         <ion-item>
           <ion-label>
             {{'WINK.STATUS.BUSY' | translate}}
           </ion-label>
-          <ion-radio slot="start" value="xxx"></ion-radio>
+          <ion-radio 
+            slot="start" 
+            value="WINK.STATUS.BUSY" 
+            (ionFocus)="Blur($event)"
+            [checked]="description && description === 'WINK.STATUS.BUSY'">
+          </ion-radio>
         </ion-item>
     
-        <ion-item>
-          <ion-input></ion-input>
-          <ion-radio slot="start" value="griff"></ion-radio>
+        <ion-item #item > 
+          <ion-input #custom 
+            (ionFocus)="Focus($event)" 
+            [placeholder]="'WINK.HOME.STATUS' | translate" 
+            [maxlength]="maxStatus"
+            [value]="description && isInput ? description : null">
+          </ion-input>
+          <ion-radio 
+            slot="start" 
+            value="input"
+            [checked]="!description || focusInput">
+          </ion-radio>
         </ion-item>
       </ion-radio-group>
+  </div>
+
+  <div class="alert__message"
+    *ngIf="description && !isPromptStatus"
+  >
+    {{ description }}
   </div>
 
   <div class="alert__message"
@@ -46,13 +71,15 @@
       confirm: isConfirm
     }"
   >
+  <ion-buttons class="alert__buttons__row">
     <ion-button
       *ngFor="let button of buttons"
       [color]="button.type"
       (click)="close(button)"
     >
-      {{ button.label }}
+      {{ button.label | translate }}
     </ion-button>
+  </ion-buttons>
   </div>
 
   <div class="alert__buttons__tutorial"
