--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -75,7 +75,7 @@
   displayFormat="DD/MM/YYYY" 
   min="1900-01-01" 
   [max]="FechaActual() | date:'yyy-MM-dd'"  
-  [value]="Valor(0)? (Valor(0) | date:'MM-dd-yyyy') : null "
+  [value]="Valor(0)? (Valor(0)) : null "
   cancel-text="Cancelar" 
   done-text="Aceptar" 
   (ionChange)="onInput($event.target.value, 0)"
