--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -5,6 +5,13 @@
   opacity: 0.5;
 }
 
+.activo2 {
+  opacity: 1;
+}
+.inactivo2 {
+  opacity: 0.5;
+}
+
 .grid-home {
   padding-left: 0%; 
   padding-right: 0%; 
