--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -56,7 +56,7 @@
   <div class="alert__message"
     *ngIf="description && !isPromptStatus"
   >
-    {{ description }}
+    {{ description | translate }}
   </div>
 
   <div class="alert__message"
