--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -114,8 +114,8 @@
           ></ion-textarea>
         </ion-item>
         <div *ngIf="tour" tourAnchor="sections"></div>
-        <mat-accordion multi="true" cdkDropListGroup>
-          
+        <mat-accordion multi="true" cdkDropListGroup 
+        class="margin-bottom">
           
           <mat-expansion-panel #pp 
           cdkDropList
